src/main/metadata/objects/SR_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Person Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SR Histories</relationshipLabel>
        <relationshipName>SR_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Alarm__c</fullName>
        <label>Date of Alarm</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Desc_R__c</fullName>
        <label>Desc R</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncidentNo__c</fullName>
        <label>IncidentNo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentSrc_Type__c</fullName>
        <label>IncidentSrc Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentSrc__c</fullName>
        <label>IncidentSrc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operat__c</fullName>
        <label>Operat</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Time__c</fullName>
        <label>SR Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsVIN__c</fullName>
        <label>UsVIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vehicle__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MB</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>SR Histories</relationshipLabel>
        <relationshipName>SR_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SR History</label>
    <nameField>
        <displayFormat>SR History - {00000000}</displayFormat>
        <label>SR History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>